feat: Swagger setup
